docs: update .gitignore with common files and directories and commit all changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,77 @@
 .idea
+# Additional common entries
+*.tmp
+*.temp
+.vscode/
+*.swp
+*.swo
+Thumbs.db
+.DS_Store
+.yarn
+.libs
+!libs/*
+.config
+!config/*
+production/
+.app/
+.ijwb/
+.iws
+*.iws
+!.idea/libraries
+!.idea/modules.xml
+!.idea/workspace.xml
+!.idea/navEditor.xml
+!.idea/assetWizardSettings.xml
+!.idea/compiler.xml
+!.idea/copyright/profiles_settings.xml
+!.idea/description.html
+!.idea/encodings.xml
+!.idea/jsLibraryMappings.xml
+!.idea/jslint.xml
+!.idea/misc.xml
+!.idea/modules.xml
+!.idea/qtcreator
+!.idea/scopes/scope_settings.xml
+!.idea/vcs.xml
+!.idea/watcherTasks.xml
+nbproject/
+*~
+\#*#
+/.grunt
+.jscsrc
+.jshintcache
+.svn/
+CVS/
+*.sublime-workspace
+.tern-port
+.tern-project
+.history
+.grunt
+.lock-wscript
+.wafpickle-N
+node_modules/
+npm-debug.log
+config.gypi
+*.orig
+.idea/
+*.tgz
+.nyc_output
+.sendcover
+.vscode/
+coverage/
+.Nuxt
+.Next
+.Cache
+.Dockerignore
+.Gitattributes
+.Gitignore
+.Prettierignore
+.Prettierrc
+.Eslintrc
+.Eslintignore
+.Babelrc
+.Flowconfig
+.Stylelintignore
+.Stylelintrc
+.Remarkrc
+.Watchmanconfig
